# Torrent-flex-api

./: .Dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  check_dependencies.sh  docker-compose.yaml  docker-compose.yml  entrypoint.sh  handel_migrations.sh  manage.py  pyproject.toml  setup_git_hooks.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: task-assignment-.md
.github/workflows/: conventional-commits.yml  docker-publish.yml
health/: urls.py  views.py
hypertube/: settings.py  urls.py
